Fixed reCaptcha misalignment

--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -157,7 +157,7 @@
       div,
       button {
         margin: 0 auto !important;
-        padding: 0 $padding-small;
+        padding: 0 $padding-small !important;
       }
     }
     input,
